--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -2,10 +2,8 @@
   background: var(--clr-grey-1);
   font-weight: 400;
   padding: 3.2rem 0;
-  &__wrapper {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin-right: 33.2rem;
+  &__text {
+    width: 100%;
   }
   &__wordmark {
     font-size: var(--fs-wordmark);
@@ -14,6 +12,11 @@
   &__links {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    margin-top: 3.2rem;
+  }
+  &__column {
+    width: 100%;
   }
   &__link {
     display: block;
@@ -22,5 +25,26 @@
     &:not(:last-child) {
       margin-bottom: 1.2rem;
     }
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .footer {
+    &__wrapper {
+      display: flex;
+      margin-right: 10vw;
+    }
+    &__links {
+      margin-top: 0;
+    }
+    &__column {
+      width: unset;
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .footer__wrapper {
+    margin-right: 33.2rem;
   }
 }
